force-app/main/default/objects/Qbo_Item__c/Qbo_Item__c.object-meta.xml
<CustomObject>
    <description>Represents an Item created in Quickbooks</description>
    <label>Qbo Item</label>
    <nameField>
        <label>Qbo Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Qbo Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>