force-app/main/default/objects/Qbo_Item__c/fields/Abatement_Rate__c.field-meta.xml
<CustomField>
    <fullName>Abatement_Rate__c</fullName>
    <label>Abatement Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>