force-app/main/default/objects/Qbo_Item__c/fields/Asset_Account_Reference__c.field-meta.xml
<CustomField>
    <fullName>Asset_Account_Reference__c</fullName>
    <label>Asset Account Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>