force-app/main/default/objects/Qbo_Item__c/fields/Expense_Account_Ref__c.field-meta.xml
<CustomField>
    <fullName>Expense_Account_Ref__c</fullName>
    <label>Expense Account Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>