force-app/main/default/objects/Qbo_Item__c/fields/Fully_Qualified_Name__c.field-meta.xml
<CustomField>
    <fullName>Fully_Qualified_Name__c</fullName>
    <label>Fully Qualified Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>