force-app/main/default/objects/Qbo_Item__c/fields/Income_Account_Reference__c.field-meta.xml
<CustomField>
    <fullName>Income_Account_Reference__c</fullName>
    <label>Income Account Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>