force-app/main/default/objects/Qbo_Item__c/fields/Parent_Ref__c.field-meta.xml
<CustomField>
    <fullName>Parent_Ref__c</fullName>
    <label>Parent Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>