force-app/main/default/objects/Qbo_Item__c/fields/Preferred_Vendor_Reference__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Vendor_Reference__c</fullName>
    <label>Preferred Vendor Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>