force-app/main/default/objects/Qbo_Item__c/fields/Purchase_Description__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Description__c</fullName>
    <label>Purchase Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>