force-app/main/default/objects/Qbo_Item__c/fields/Purchase_Tax_Code_Reference__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Tax_Code_Reference__c</fullName>
    <label>Purchase Tax Code Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>