force-app/main/default/objects/Qbo_Item__c/fields/Purhase_Tax_Included__c.field-meta.xml
<CustomField>
    <fullName>Purhase_Tax_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Purhase Tax Included</label>
    <type>Checkbox</type>
</CustomField>