force-app/main/default/objects/Qbo_Item__c/fields/Qbo_Id__c.field-meta.xml
<CustomField>
    <fullName>Qbo_Id__c</fullName>
    <externalId>true</externalId>
    <label>Qbo Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>