force-app/main/default/objects/Qbo_Item__c/fields/Reorder_Point__c.field-meta.xml
<CustomField>
    <fullName>Reorder_Point__c</fullName>
    <label>Reorder Point</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>