force-app/main/default/objects/Qbo_Item__c/fields/Reverse_Charge_Rate__c.field-meta.xml
<CustomField>
    <fullName>Reverse_Charge_Rate__c</fullName>
    <label>Reverse Charge Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>