force-app/main/default/objects/Qbo_Item__c/fields/Sales_Tax_Code_Reference__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax_Code_Reference__c</fullName>
    <label>Sales Tax Code Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>