force-app/main/default/objects/Qbo_Item__c/fields/Sales_Tax_Included__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Tax Included</label>
    <type>Checkbox</type>
</CustomField>