force-app/main/default/objects/Qbo_Item__c/fields/Sku__c.field-meta.xml
<CustomField>
    <fullName>Sku__c</fullName>
    <label>Sku</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>