force-app/main/default/objects/Qbo_Item__c/fields/Sub_Item__c.field-meta.xml
<CustomField>
    <fullName>Sub_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sub Item</label>
    <type>Checkbox</type>
</CustomField>