force-app/main/default/objects/Qbo_Item__c/fields/Sync_Token_c__c.field-meta.xml
<CustomField>
    <fullName>Sync_Token_c__c</fullName>
    <label>Sync Token__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>