force-app/main/default/objects/Qbo_Item__c/fields/Tax_Classification_Reference__c.field-meta.xml
<CustomField>
    <fullName>Tax_Classification_Reference__c</fullName>
    <label>Tax Classification Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>