force-app/main/default/objects/Qbo_Item__c/fields/Track_Qty_On_Hand__c.field-meta.xml
<CustomField>
    <fullName>Track_Qty_On_Hand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Track Qty On Hand</label>
    <type>Checkbox</type>
</CustomField>