force-app/main/default/objects/Qbo_Item__c/fields/UQC_Display_Text__c.field-meta.xml
<CustomField>
    <fullName>UQC_Display_Text__c</fullName>
    <label>UQC Display Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>