force-app/main/default/objects/Qbo_Item__c/fields/UQC_Id__c.field-meta.xml
<CustomField>
    <fullName>UQC_Id__c</fullName>
    <label>UQC Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>